custom-k8s-spec/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voting-app
  labels:
    name: voting-app
    app: voting-app
