custom-k8s-spec/06-vote-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: voting-app
  labels:
    app: vote
    tier: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: vote-service
  selector:
    app: vote
